<resources>
    <string name="app_name">FinTrack</string>
    <string-array name="account_types">
        <item>Cash</item>
        <item>Bank Account</item>
        <item>Credit Card</item>
        <item>Savings</item>
        <item>Investment</item>
    </string-array>
    <string-array name="default_categories">
        <item>Food</item>
        <item>Transport</item>
        <item>Utilities</item>
        <item>Shopping</item>
        <item>Health</item>
        <item>Entertainment</item>
        <item>Salary</item>
        <item>Other</item>
    </string-array>
    <!-- For Goals Fragment -->
    <string name="title_my_savings_goals">My Savings Goals</string>
    <string name="no_goals_set">You haven\'t set any savings goals yet.</string>
    <string name="add_new_goal">Add New Goal</string>

    <!-- For Add Goal Dialog -->
    <string name="dialog_title_new_goal">New Savings Goal</string>
    <string name="hint_goal_name">Goal Name (e.g., New Phone)</string>
    <string name="hint_target_amount">Target Amount (LKR)</string>

    <!-- For Contribute Dialog -->
    <string name="dialog_title_contribute_to">Contribute to %1$s</string> <!-- %1$s is a placeholder for the goal name -->
    <string name="hint_deposit_amount">Amount (LKR)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

</resources>